<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">blelibrabry</string>
    <string name="connect_status">Connect status</string>
    <string name="action_settings">Settings</string>
    
    <string name="ble_not_supported">Bluetooth Low Energy is Not Supported.</string>
	<string name="heart_rate">Heart rate</string>
	<string name="connect">Connect</string>
	<string name="connecting">Connecting</string>
	<string name="disconnect">Disconnect</string>
	<string name="device_name">Device name</string>
	<string name="connected">Connected</string>
	<string name="disconnected">Disconnected</string>
	
	<string name="unknown_characteristic">Unknown characteristic</string>
	<string name="unknown_service">Unknown service</string>
	
</resources>
