<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.blelibrabry.MainActivity" >

    <TextView android:id="@+id/connect_status_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:text="@string/connect_status" />
    
    <TextView android:id="@+id/connect_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/connect_status_label" />
    
    <TextView android:id="@+id/device_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connect_status_label"
        android:layout_marginRight="5dp"
        android:text="@string/device_name" />
    
    <TextView android:id="@+id/device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connect_status"
        android:layout_toRightOf="@+id/device_name_label" />
    
    <TextView android:id="@+id/heart_rate_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/device_name_label"
        android:layout_marginRight="5dp"
        android:text="@string/heart_rate" />
    
    <TextView android:id="@+id/heart_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/device_name"
        android:layout_toRightOf="@+id/heart_rate_label" />
    
    <Button android:id="@+id/connect_button"
	     android:layout_height="wrap_content"
	     android:layout_width="wrap_content"
         android:layout_alignParentBottom="true"
	     android:text="@string/connect"
	     android:visibility="invisible" />
    <Button android:id="@+id/disconnect_button"
	     android:layout_height="wrap_content"
	     android:layout_width="wrap_content"
	     android:layout_alignParentBottom="true"
         android:layout_toRightOf="@+id/connect_button"
	     android:text="@string/disconnect"
	     android:visibility="invisible" />
        

</RelativeLayout>
